refactor: Replace Stream.collect(Collectors.toList()) with Stream.toList()