@@ -1,6 +1,5 @@
 package api.bpartners.annotator.endpoint.rest.controller;
 
-import static java.util.stream.Collectors.toList;
 
 import api.bpartners.annotator.endpoint.rest.controller.mapper.AnnotationBatchMapper;
 import api.bpartners.annotator.endpoint.rest.model.AnnotationBatch;
@@ -32,7 +31,7 @@ public class UserAnnotationBatchController {
       @RequestParam BoundedPageSize pageSize) {
     return service.findAllByInterExternalAnnotatorIdAndTask(userId, taskId, page, pageSize).stream()
         .map(mapper::toRest)
-        .collect(toList());
+        .toList();
   }
 
   @GetMapping("/users/{userId}/tasks/{taskId}/annotations/{annotationBatchId}")
